force-app/main/default/objects/DocGen_Saved_Query__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short description of what this query targets.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>