force-app/main/default/objects/DocGen_Saved_Query__c/fields/DocGen_Template__c.field-meta.xml
<CustomField>
    <fullName>DocGen_Template__c</fullName>
    <description>The template this query belongs to.</description>
    <label>DocGen Template</label>
    <referenceTo>DocGen_Template__c</referenceTo>
    <relationshipLabel>Saved Queries</relationshipLabel>
    <relationshipName>Saved_Queries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>